--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "onbe-mock-server",
-  "version": "0.1.0",
-  "private": true,
+  "name": "embedded-payment",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^5.1.0",
+    "uuid": "^9.0.0",
+    "xml2js": "^0.6.2"
   }
 }
